[tool.poetry]
name = "my-car-rental-app"
version = "0.1.0"
description = "Sistema de gestión de alquiler de carros."
authors = ["María García <mariav2601@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
